src/tests/data/SemanticErrors/UndefinedRefToFunc.c

#include <stdio.h>

int main()
{
    f();    // ERROR
	return 0;
}